fix(page-announcement): spacing tweaks

--- a/lbh/components/lbh-page-announcement/_page-announcement.scss
+++ b/lbh/components/lbh-page-announcement/_page-announcement.scss
@@ -13,6 +13,7 @@
 
     &__content {
       @include lbh-body-m;
+      margin-top: 0;
 
       a {
         @include lbh-link;
